<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <!-- Instruction Text -->
    <TextView
        android:id="@+id/text_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/input_height"
        app:layout_constraintStart_toStartOf="@+id/input_height"
        android:layout_marginBottom="24dp" />

    <!-- Height Input -->
    <EditText
        android:id="@+id/input_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_height"
        android:textAlignment="textEnd"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_height_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/text_height_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/mesure_heigth"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_height"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Weight Input -->
    <EditText
        android:id="@+id/input_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_weight"
        android:textAlignment="textEnd"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/input_height"
        app:layout_constraintStart_toStartOf="@+id/input_height"
        app:layout_constraintEnd_toEndOf="@+id/input_height"/>

    <TextView
        android:id="@+id/text_weight_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mesure_weight"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_weight"
        app:layout_constraintEnd_toEndOf="@+id/text_height_unit" />

    <!-- Calculate Button at the bottom -->
    <Button
        android:id="@+id/button_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/calculate"
        app:cornerRadius="0dp"
        android:backgroundTint="@color/gray"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
